# VortiqX

./: .gitignore  README.md  ai_vulnerability_analyzer.py  app.py  docker_zap_runner.py  index.html  pyproject.toml  render.yaml  requirements.txt  routes.py  vulnerability_scanner.py  zap_scanner.py
static/css/: style.css
static/js/: main.js
templates/: base.html  index.html  results.html
